// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common - Header - UserButton should match snapshot with account 1`] = `
<div>
  <button
    aria-haspopup="true"
    class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-17kknav-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-startIcon MuiButton-iconSizeMedium css-1sx3uk1-MuiButton-startIcon"
    >
      <svg
        color="primary"
      >
        account-settings.svg
      </svg>
    </span>
    <p
      class="MuiTypography-root MuiTypography-body1 css-19q0tdj-MuiTypography-root"
    >
      My Account
    </p>
    <span
      class="MuiButton-endIcon MuiButton-iconSizeMedium css-1f03u4k-MuiButton-endIcon"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`common - Header - UserButton should match snapshot with no account 1`] = `
<div>
  <button
    class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-j31aqk-MuiButtonBase-root-MuiButton-root"
    data-testid="sign-in-header-button"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-startIcon MuiButton-iconSizeMedium css-1sx3uk1-MuiButton-startIcon"
    >
      <svg
        color="primary"
        height="36"
      >
        account-settings.svg
      </svg>
    </span>
    Sign In / Register
  </button>
</div>
`;

exports[`common - Header - UserButton should match snapshot with payment management 1`] = `
<div>
  <button
    aria-haspopup="true"
    class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-17kknav-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-startIcon MuiButton-iconSizeMedium css-1sx3uk1-MuiButton-startIcon"
    >
      <svg
        color="primary"
      >
        account-settings.svg
      </svg>
    </span>
    <p
      class="MuiTypography-root MuiTypography-body1 css-19q0tdj-MuiTypography-root"
    >
      My Account
    </p>
    <span
      class="MuiButton-endIcon MuiButton-iconSizeMedium css-1f03u4k-MuiButton-endIcon"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
        data-testid="ArrowDropDownIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="m7 10 5 5 5-5z"
        />
      </svg>
    </span>
  </button>
</div>
`;
